--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @layer base {
   :root {
     /* Paleta de Colores - MODO CLARO */
-    --color-primary: #5e8d6b; /* Verde Oliva según Figma */
+    --color-primary: #86A869; /* Verde Oliva según Figma */
     --color-primary-hover: #4a6f55; /* Verde oscuro */
     --color-secondary: #01454f; /* Azul Petróleo Oscuro para secciones */
     --color-secondary-hover: #025159; /* Azul Petróleo */
@@ -129,6 +129,14 @@
     color: var(--color-text-primary);
   }
 
+  .text-body-desplegable {
+    font-family: var(--font-roboto), sans-serif;
+    font-size: 1rem; /* 16px */
+    font-weight: 350;
+    line-height: 1.5;
+    color: var(--color-text-inverse);
+  }
+
   /* Clases utilitarias de color */
   .bg-primary {
     background-color: var(--color-primary);
@@ -201,6 +209,38 @@
 
   .btn-primary:hover {
     background-color: var(--color-primary-hover);
+  }
+
+  .btn-desplegable {
+    background-color: var(--color-primary);
+    color: var(--color-text-inverse);
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+    font-weight: 700;
+    width: 11rem;
+    transition: background-color 0.3s ease;
+    border: none;
+    cursor: pointer;
+  }
+
+  .btn-desplegable-abierto {
+    background-color: var(--color-primary);
+    color: var(--color-text-inverse);
+    width: 11rem;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+    font-weight: 700;
+  }
+
+  .btn-desplegable-abierto li:hover {
+    background-color: var(--color-primary-hover);
+    border-radius: 8px;
+  }
+
+  .btn-desplegable-abierto a:hover {
+    padding: 0.25rem;
   }
 
   .btn-secondary {
