--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -555,7 +555,18 @@
 }
 
 .icon-img {
-  padding-top: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding-top: 1.563rem;
+  gap: 0.5rem;
+}
+
+.icon-img svg {
+  display: block;
+  margin: 0 auto;
 }
 
 .icon-container {
