--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,8 +74,27 @@
     --color-border-subtle: #30363d;
     --color-border: #21262d;
 
-    /* Estilos Tarjeta ContacDtos */
+    /* Estilos Tarjeta Contactos */
+    .contactos h2 {
+      color: var(--color-text-inverse);
+      font-size: 1.5rem !important; /* 24px */
+      font-weight: 600;
+      
+    }
 
+    .contactos h3 {
+      color: var(--color-text-inverse);
+      font-size: 3rem !important; /* 18px */
+      font-weight: 400;
+      
+    }
+
+    .contactate {
+      color: var(--color-text-inverse);
+      font-size: 1rem; /* 16px */
+      font-weight: 400;
+      line-height: 1.5;
+    }
 
     /* Estilos Footer */
   .terminos-footer {
